sp_ds/extensions/Col_PN/FlexBison/SP_CPN_Parser.output
Terminals unused in grammar

   ELEM_OP
   IF
   DEC_OP


Rules useless in parser due to conflicts

   57 CPN_Normalexpr: '(' CPN_Orexpr ')'
   58               | '(' CPN_Commaexpr ')'


State 52 conflicts: 1 shift/reduce
State 54 conflicts: 1 shift/reduce, 1 reduce/reduce
State 80 conflicts: 1 shift/reduce
State 87 conflicts: 7 reduce/reduce
State 89 conflicts: 7 reduce/reduce
State 124 conflicts: 1 shift/reduce


Grammar

    0 $accept: start "end of file"

    1 CPN_Constant: "integer"
    2             | "double"
    3             | "string"

    4 CPN_Variable: "identifier"

    5 CPN_Neighbor1D: "nb1Dfunc" '(' ')'

    6 CPN_Neighbor2D: "nb2Dfunc" '(' ')'

    7 CPN_AllFunc: "allfunc" '(' ')'

    8 CPN_ABSFunc: "absfunc" '(' CPN_Addexpr ')'

    9 CPN_VALFunc: "valfunc" '(' CPN_Addexpr ')'

   10 CPN_Function: CPN_Variable '(' CPN_ArgumentList ')'

   11 CPN_ArgumentList: CPN_Orexpr
   12                 | CPN_ArgumentList ',' CPN_Orexpr

   13 CPN_Atomexpr: CPN_Constant
   14             | CPN_Variable
   15             | CPN_Neighbor1D
   16             | CPN_Neighbor2D
   17             | CPN_AllFunc
   18             | CPN_ABSFunc
   19             | CPN_VALFunc
   20             | CPN_Function
   21             | '(' CPN_expr ')'
   22             | '(' CPN_Orexpr ')'
   23             | '(' CPN_Normalexpr ')'
   24             | '(' CPN_Commaexpr ')'

   25 CPN_Postfixexpr: CPN_Postfixexpr ':' "integer"
   26                | CPN_Atomexpr
   27                | CPN_Postfixexpr '[' CPN_Atomexpr ']'

   28 CPN_Unaryexpr: CPN_Postfixexpr
   29              | '+' CPN_Postfixexpr
   30              | '-' CPN_Postfixexpr
   31              | '@' CPN_Postfixexpr
   32              | '!' CPN_Postfixexpr

   33 CPN_Mulexpr: CPN_Unaryexpr
   34            | CPN_Mulexpr '*' CPN_Unaryexpr
   35            | CPN_Mulexpr '/' CPN_Unaryexpr
   36            | CPN_Mulexpr '%' CPN_Unaryexpr
   37            | CPN_Mulexpr '^' CPN_Unaryexpr

   38 CPN_Addexpr: CPN_Mulexpr
   39            | CPN_Addexpr '+' CPN_Mulexpr
   40            | CPN_Addexpr '-' CPN_Mulexpr

   41 CPN_Relexpr: CPN_Addexpr
   42            | CPN_Relexpr '<' CPN_Addexpr
   43            | CPN_Relexpr '>' CPN_Addexpr
   44            | CPN_Relexpr LE_OP CPN_Addexpr
   45            | CPN_Relexpr GE_OP CPN_Addexpr
   46            | CPN_Relexpr "elemOfOP" CPN_Addexpr

   47 CPN_Eqexpr: CPN_Relexpr
   48           | CPN_Eqexpr '=' CPN_Relexpr
   49           | CPN_Eqexpr NE_OP CPN_Relexpr

   50 CPN_Andexpr: CPN_Eqexpr
   51            | CPN_Andexpr '&' CPN_Eqexpr

   52 CPN_Orexpr: CPN_Andexpr
   53           | CPN_Orexpr '|' CPN_Andexpr

   54 CPN_Commaexpr: CPN_Normalexpr
   55              | CPN_Commaexpr ',' CPN_Normalexpr

   56 CPN_Normalexpr: CPN_Orexpr
   57               | '(' CPN_Orexpr ')'
   58               | '(' CPN_Commaexpr ')'

   59 CPN_Seperatorexpr: CPN_Normalexpr
   60                  | CPN_Seperatorexpr '`' CPN_Normalexpr

   61 CPN_Predicateexpr: CPN_Seperatorexpr
   62                  | '[' CPN_Orexpr ']' CPN_Seperatorexpr
   63                  | '[' CPN_Orexpr ']' '(' CPN_Connectorexpr ')'

   64 CPN_Connectorexpr: CPN_Predicateexpr
   65                  | CPN_Connectorexpr CNN CPN_Predicateexpr

   66 CPN_expr: CPN_Connectorexpr

   67 start: /* empty */
   68      | start ';'
   69      | start "end of line"
   70      | start CPN_expr ';'
   71      | start CPN_expr "end of line"
   72      | start CPN_expr "end of file"


Terminals, with rules where they appear

"end of file" (0) 0 72
'!' (33) 32
'%' (37) 36
'&' (38) 51
'(' (40) 5 6 7 8 9 10 21 22 23 24 57 58 63
')' (41) 5 6 7 8 9 10 21 22 23 24 57 58 63
'*' (42) 34
'+' (43) 29 39
',' (44) 12 55
'-' (45) 30 40
'/' (47) 35
':' (58) 25
';' (59) 68 70
'<' (60) 42
'=' (61) 48
'>' (62) 43
'@' (64) 31
'[' (91) 27 62 63
']' (93) 27 62 63
'^' (94) 37
'`' (96) 60
'|' (124) 53
error (256)
LE_OP (258) 44
GE_OP (259) 45
ELEM_OP (260)
NE_OP (261) 49
IF (262)
INDEX (263)
CNN (264) 65
DEC_OP (265)
INC_OP (266)
"end of line" (267) 69 71
"integer" (268) 1 25
"double" (269) 2
"identifier" (270) 4
"string" (271) 3
"nb1Dfunc" (272) 5
"nb2Dfunc" (273) 6
"allfunc" (274) 7
"absfunc" (275) 8
"valfunc" (276) 9
"elemOfOP" (277) 46


Nonterminals, with rules where they appear

$accept (44)
    on left: 0
CPN_Constant (45)
    on left: 1 2 3, on right: 13
CPN_Variable (46)
    on left: 4, on right: 10 14
CPN_Neighbor1D (47)
    on left: 5, on right: 15
CPN_Neighbor2D (48)
    on left: 6, on right: 16
CPN_AllFunc (49)
    on left: 7, on right: 17
CPN_ABSFunc (50)
    on left: 8, on right: 18
CPN_VALFunc (51)
    on left: 9, on right: 19
CPN_Function (52)
    on left: 10, on right: 20
CPN_ArgumentList (53)
    on left: 11 12, on right: 10 12
CPN_Atomexpr (54)
    on left: 13 14 15 16 17 18 19 20 21 22 23 24, on right: 26 27
CPN_Postfixexpr (55)
    on left: 25 26 27, on right: 25 27 28 29 30 31 32
CPN_Unaryexpr (56)
    on left: 28 29 30 31 32, on right: 33 34 35 36 37
CPN_Mulexpr (57)
    on left: 33 34 35 36 37, on right: 34 35 36 37 38 39 40
CPN_Addexpr (58)
    on left: 38 39 40, on right: 8 9 39 40 41 42 43 44 45 46
CPN_Relexpr (59)
    on left: 41 42 43 44 45 46, on right: 42 43 44 45 46 47 48 49
CPN_Eqexpr (60)
    on left: 47 48 49, on right: 48 49 50 51
CPN_Andexpr (61)
    on left: 50 51, on right: 51 52 53
CPN_Orexpr (62)
    on left: 52 53, on right: 11 12 22 53 56 57 62 63
CPN_Commaexpr (63)
    on left: 54 55, on right: 24 55 58
CPN_Normalexpr (64)
    on left: 56 57 58, on right: 23 54 55 59 60
CPN_Seperatorexpr (65)
    on left: 59 60, on right: 60 61 62
CPN_Predicateexpr (66)
    on left: 61 62 63, on right: 64 65
CPN_Connectorexpr (67)
    on left: 64 65, on right: 63 65 66
CPN_expr (68)
    on left: 66, on right: 21 70 71 72
start (69)
    on left: 67 68 69 70 71 72, on right: 0 68 69 70 71 72


State 0

    0 $accept: . start "end of file"

    $default  reduce using rule 67 (start)

    start  go to state 1


State 1

    0 $accept: start . "end of file"
   68 start: start . ';'
   69      | start . "end of line"
   70      | start . CPN_expr ';'
   71      | start . CPN_expr "end of line"
   72      | start . CPN_expr "end of file"

    "end of file"  shift, and go to state 2
    '+'            shift, and go to state 3
    '-'            shift, and go to state 4
    '@'            shift, and go to state 5
    '!'            shift, and go to state 6
    "end of line"  shift, and go to state 7
    "integer"      shift, and go to state 8
    "double"       shift, and go to state 9
    "identifier"   shift, and go to state 10
    "string"       shift, and go to state 11
    "nb1Dfunc"     shift, and go to state 12
    "nb2Dfunc"     shift, and go to state 13
    "allfunc"      shift, and go to state 14
    "absfunc"      shift, and go to state 15
    "valfunc"      shift, and go to state 16
    '('            shift, and go to state 17
    '['            shift, and go to state 18
    ';'            shift, and go to state 19

    CPN_Constant       go to state 20
    CPN_Variable       go to state 21
    CPN_Neighbor1D     go to state 22
    CPN_Neighbor2D     go to state 23
    CPN_AllFunc        go to state 24
    CPN_ABSFunc        go to state 25
    CPN_VALFunc        go to state 26
    CPN_Function       go to state 27
    CPN_Atomexpr       go to state 28
    CPN_Postfixexpr    go to state 29
    CPN_Unaryexpr      go to state 30
    CPN_Mulexpr        go to state 31
    CPN_Addexpr        go to state 32
    CPN_Relexpr        go to state 33
    CPN_Eqexpr         go to state 34
    CPN_Andexpr        go to state 35
    CPN_Orexpr         go to state 36
    CPN_Normalexpr     go to state 37
    CPN_Seperatorexpr  go to state 38
    CPN_Predicateexpr  go to state 39
    CPN_Connectorexpr  go to state 40
    CPN_expr           go to state 41


State 2

    0 $accept: start "end of file" .

    $default  accept


State 3

   29 CPN_Unaryexpr: '+' . CPN_Postfixexpr

    "integer"     shift, and go to state 8
    "double"      shift, and go to state 9
    "identifier"  shift, and go to state 10
    "string"      shift, and go to state 11
    "nb1Dfunc"    shift, and go to state 12
    "nb2Dfunc"    shift, and go to state 13
    "allfunc"     shift, and go to state 14
    "absfunc"     shift, and go to state 15
    "valfunc"     shift, and go to state 16
    '('           shift, and go to state 42

    CPN_Constant     go to state 20
    CPN_Variable     go to state 21
    CPN_Neighbor1D   go to state 22
    CPN_Neighbor2D   go to state 23
    CPN_AllFunc      go to state 24
    CPN_ABSFunc      go to state 25
    CPN_VALFunc      go to state 26
    CPN_Function     go to state 27
    CPN_Atomexpr     go to state 28
    CPN_Postfixexpr  go to state 43


State 4

   30 CPN_Unaryexpr: '-' . CPN_Postfixexpr

    "integer"     shift, and go to state 8
    "double"      shift, and go to state 9
    "identifier"  shift, and go to state 10
    "string"      shift, and go to state 11
    "nb1Dfunc"    shift, and go to state 12
    "nb2Dfunc"    shift, and go to state 13
    "allfunc"     shift, and go to state 14
    "absfunc"     shift, and go to state 15
    "valfunc"     shift, and go to state 16
    '('           shift, and go to state 42

    CPN_Constant     go to state 20
    CPN_Variable     go to state 21
    CPN_Neighbor1D   go to state 22
    CPN_Neighbor2D   go to state 23
    CPN_AllFunc      go to state 24
    CPN_ABSFunc      go to state 25
    CPN_VALFunc      go to state 26
    CPN_Function     go to state 27
    CPN_Atomexpr     go to state 28
    CPN_Postfixexpr  go to state 44


State 5

   31 CPN_Unaryexpr: '@' . CPN_Postfixexpr

    "integer"     shift, and go to state 8
    "double"      shift, and go to state 9
    "identifier"  shift, and go to state 10
    "string"      shift, and go to state 11
    "nb1Dfunc"    shift, and go to state 12
    "nb2Dfunc"    shift, and go to state 13
    "allfunc"     shift, and go to state 14
    "absfunc"     shift, and go to state 15
    "valfunc"     shift, and go to state 16
    '('           shift, and go to state 42

    CPN_Constant     go to state 20
    CPN_Variable     go to state 21
    CPN_Neighbor1D   go to state 22
    CPN_Neighbor2D   go to state 23
    CPN_AllFunc      go to state 24
    CPN_ABSFunc      go to state 25
    CPN_VALFunc      go to state 26
    CPN_Function     go to state 27
    CPN_Atomexpr     go to state 28
    CPN_Postfixexpr  go to state 45


State 6

   32 CPN_Unaryexpr: '!' . CPN_Postfixexpr

    "integer"     shift, and go to state 8
    "double"      shift, and go to state 9
    "identifier"  shift, and go to state 10
    "string"      shift, and go to state 11
    "nb1Dfunc"    shift, and go to state 12
    "nb2Dfunc"    shift, and go to state 13
    "allfunc"     shift, and go to state 14
    "absfunc"     shift, and go to state 15
    "valfunc"     shift, and go to state 16
    '('           shift, and go to state 42

    CPN_Constant     go to state 20
    CPN_Variable     go to state 21
    CPN_Neighbor1D   go to state 22
    CPN_Neighbor2D   go to state 23
    CPN_AllFunc      go to state 24
    CPN_ABSFunc      go to state 25
    CPN_VALFunc      go to state 26
    CPN_Function     go to state 27
    CPN_Atomexpr     go to state 28
    CPN_Postfixexpr  go to state 46


State 7

   69 start: start "end of line" .

    $default  reduce using rule 69 (start)


State 8

    1 CPN_Constant: "integer" .

    $default  reduce using rule 1 (CPN_Constant)


State 9

    2 CPN_Constant: "double" .

    $default  reduce using rule 2 (CPN_Constant)


State 10

    4 CPN_Variable: "identifier" .

    $default  reduce using rule 4 (CPN_Variable)


State 11

    3 CPN_Constant: "string" .

    $default  reduce using rule 3 (CPN_Constant)


State 12

    5 CPN_Neighbor1D: "nb1Dfunc" . '(' ')'

    '('  shift, and go to state 47


State 13

    6 CPN_Neighbor2D: "nb2Dfunc" . '(' ')'

    '('  shift, and go to state 48


State 14

    7 CPN_AllFunc: "allfunc" . '(' ')'

    '('  shift, and go to state 49


State 15

    8 CPN_ABSFunc: "absfunc" . '(' CPN_Addexpr ')'

    '('  shift, and go to state 50


State 16

    9 CPN_VALFunc: "valfunc" . '(' CPN_Addexpr ')'

    '('  shift, and go to state 51


State 17

   21 CPN_Atomexpr: '(' . CPN_expr ')'
   22             | '(' . CPN_Orexpr ')'
   23             | '(' . CPN_Normalexpr ')'
   24             | '(' . CPN_Commaexpr ')'
   57 CPN_Normalexpr: '(' . CPN_Orexpr ')'
   58               | '(' . CPN_Commaexpr ')'

    '+'           shift, and go to state 3
    '-'           shift, and go to state 4
    '@'           shift, and go to state 5
    '!'           shift, and go to state 6
    "integer"     shift, and go to state 8
    "double"      shift, and go to state 9
    "identifier"  shift, and go to state 10
    "string"      shift, and go to state 11
    "nb1Dfunc"    shift, and go to state 12
    "nb2Dfunc"    shift, and go to state 13
    "allfunc"     shift, and go to state 14
    "absfunc"     shift, and go to state 15
    "valfunc"     shift, and go to state 16
    '('           shift, and go to state 17
    '['           shift, and go to state 18

    CPN_Constant       go to state 20
    CPN_Variable       go to state 21
    CPN_Neighbor1D     go to state 22
    CPN_Neighbor2D     go to state 23
    CPN_AllFunc        go to state 24
    CPN_ABSFunc        go to state 25
    CPN_VALFunc        go to state 26
    CPN_Function       go to state 27
    CPN_Atomexpr       go to state 28
    CPN_Postfixexpr    go to state 29
    CPN_Unaryexpr      go to state 30
    CPN_Mulexpr        go to state 31
    CPN_Addexpr        go to state 32
    CPN_Relexpr        go to state 33
    CPN_Eqexpr         go to state 34
    CPN_Andexpr        go to state 35
    CPN_Orexpr         go to state 52
    CPN_Commaexpr      go to state 53
    CPN_Normalexpr     go to state 54
    CPN_Seperatorexpr  go to state 38
    CPN_Predicateexpr  go to state 39
    CPN_Connectorexpr  go to state 40
    CPN_expr           go to state 55


State 18

   62 CPN_Predicateexpr: '[' . CPN_Orexpr ']' CPN_Seperatorexpr
   63                  | '[' . CPN_Orexpr ']' '(' CPN_Connectorexpr ')'

    '+'           shift, and go to state 3
    '-'           shift, and go to state 4
    '@'           shift, and go to state 5
    '!'           shift, and go to state 6
    "integer"     shift, and go to state 8
    "double"      shift, and go to state 9
    "identifier"  shift, and go to state 10
    "string"      shift, and go to state 11
    "nb1Dfunc"    shift, and go to state 12
    "nb2Dfunc"    shift, and go to state 13
    "allfunc"     shift, and go to state 14
    "absfunc"     shift, and go to state 15
    "valfunc"     shift, and go to state 16
    '('           shift, and go to state 42

    CPN_Constant     go to state 20
    CPN_Variable     go to state 21
    CPN_Neighbor1D   go to state 22
    CPN_Neighbor2D   go to state 23
    CPN_AllFunc      go to state 24
    CPN_ABSFunc      go to state 25
    CPN_VALFunc      go to state 26
    CPN_Function     go to state 27
    CPN_Atomexpr     go to state 28
    CPN_Postfixexpr  go to state 29
    CPN_Unaryexpr    go to state 30
    CPN_Mulexpr      go to state 31
    CPN_Addexpr      go to state 32
    CPN_Relexpr      go to state 33
    CPN_Eqexpr       go to state 34
    CPN_Andexpr      go to state 35
    CPN_Orexpr       go to state 56


State 19

   68 start: start ';' .

    $default  reduce using rule 68 (start)


State 20

   13 CPN_Atomexpr: CPN_Constant .

    $default  reduce using rule 13 (CPN_Atomexpr)


State 21

   10 CPN_Function: CPN_Variable . '(' CPN_ArgumentList ')'
   14 CPN_Atomexpr: CPN_Variable .

    '('  shift, and go to state 57

    $default  reduce using rule 14 (CPN_Atomexpr)


State 22

   15 CPN_Atomexpr: CPN_Neighbor1D .

    $default  reduce using rule 15 (CPN_Atomexpr)


State 23

   16 CPN_Atomexpr: CPN_Neighbor2D .

    $default  reduce using rule 16 (CPN_Atomexpr)


State 24

   17 CPN_Atomexpr: CPN_AllFunc .

    $default  reduce using rule 17 (CPN_Atomexpr)


State 25

   18 CPN_Atomexpr: CPN_ABSFunc .

    $default  reduce using rule 18 (CPN_Atomexpr)


State 26

   19 CPN_Atomexpr: CPN_VALFunc .

    $default  reduce using rule 19 (CPN_Atomexpr)


State 27

   20 CPN_Atomexpr: CPN_Function .

    $default  reduce using rule 20 (CPN_Atomexpr)


State 28

   26 CPN_Postfixexpr: CPN_Atomexpr .

    $default  reduce using rule 26 (CPN_Postfixexpr)


State 29

   25 CPN_Postfixexpr: CPN_Postfixexpr . ':' "integer"
   27                | CPN_Postfixexpr . '[' CPN_Atomexpr ']'
   28 CPN_Unaryexpr: CPN_Postfixexpr .

    ':'  shift, and go to state 58
    '['  shift, and go to state 59

    $default  reduce using rule 28 (CPN_Unaryexpr)


State 30

   33 CPN_Mulexpr: CPN_Unaryexpr .

    $default  reduce using rule 33 (CPN_Mulexpr)


State 31

   34 CPN_Mulexpr: CPN_Mulexpr . '*' CPN_Unaryexpr
   35            | CPN_Mulexpr . '/' CPN_Unaryexpr
   36            | CPN_Mulexpr . '%' CPN_Unaryexpr
   37            | CPN_Mulexpr . '^' CPN_Unaryexpr
   38 CPN_Addexpr: CPN_Mulexpr .

    '*'  shift, and go to state 60
    '/'  shift, and go to state 61
    '%'  shift, and go to state 62
    '^'  shift, and go to state 63

    $default  reduce using rule 38 (CPN_Addexpr)


State 32

   39 CPN_Addexpr: CPN_Addexpr . '+' CPN_Mulexpr
   40            | CPN_Addexpr . '-' CPN_Mulexpr
   41 CPN_Relexpr: CPN_Addexpr .

    '+'  shift, and go to state 64
    '-'  shift, and go to state 65

    $default  reduce using rule 41 (CPN_Relexpr)


State 33

   42 CPN_Relexpr: CPN_Relexpr . '<' CPN_Addexpr
   43            | CPN_Relexpr . '>' CPN_Addexpr
   44            | CPN_Relexpr . LE_OP CPN_Addexpr
   45            | CPN_Relexpr . GE_OP CPN_Addexpr
   46            | CPN_Relexpr . "elemOfOP" CPN_Addexpr
   47 CPN_Eqexpr: CPN_Relexpr .

    LE_OP       shift, and go to state 66
    GE_OP       shift, and go to state 67
    '>'         shift, and go to state 68
    '<'         shift, and go to state 69
    "elemOfOP"  shift, and go to state 70

    $default  reduce using rule 47 (CPN_Eqexpr)


State 34

   48 CPN_Eqexpr: CPN_Eqexpr . '=' CPN_Relexpr
   49           | CPN_Eqexpr . NE_OP CPN_Relexpr
   50 CPN_Andexpr: CPN_Eqexpr .

    NE_OP  shift, and go to state 71
